Actualizacion del tema SL en otros ambitos y se agregan las filminas de clase

--- a/otros.tex
+++ b/otros.tex
@@ -1,28 +1,131 @@
 \chapter{Software Libre en otros ámbitos}
-\chapterauthor{Autor1, Autor2}
+\chapterauthor{Bajo, Moreno}
+
+\section{Software libre en el Estado}
+{\bf Impacto del software libre en las administraciones públicas} \newline
+
+Los impactos principales del software libre, y las principales nuevas perspectivas que permite, son:
+
+\begin{itemize}
+\item  \textbf{Aprovechamiento más adecuado de los recursos:} Muchas aplicaciones utilizadas o promovidas por las administraciones públicas son también utilizadas por muchos otros sectores de la sociedad. Por ello, cualquier inversión pública en el desarrollo de un producto libre que le interesa redundará en beneficios no sólo en la propia administración, sino en todos los ciudadanos que podrán usar ese producto para sus tareas informáticas, probablemente con las mejoras aportadas por la administración.
+\item  \textbf{Fomento de la industria local:} Una de las mayores ventajas del software libre es la posibilidad de desarrollar industria local de software. Cuando se usa software propietario, todo lo gastado en licencias va directamente al fabricante del producto, y además esa compra redunda en el fortalecimiento de su posición. Lo cual no es necesariamente perjudicial, pero poco eficiente para la región vinculada a la administración si analizamos la alternativa de usar un programa libre.
+
+En este caso, las empresas locales podrán competir proporcionando servicios (y el propio programa) a la administración, en condiciones muy similares a cualquier otra empresa.
+\item \textbf{Independencia de proveedor:} Cualquier organización preferirá depender de un mercado en régimen de competencia que de un solo proveedor que puede imponer las condiciones en que proporciona su producto. Sin embargo, en el mundo de la administración esta preferencia se convierte en requisito fundamental, y hasta en obligación legal en algunos casos. La administración no puede, en general, elegir contratar con un suministrador dado, sino que debe especificar sus necesidades de forma que cualquier empresa interesada, que cumpla unas ciertas características técnicas, y que proporcione el servicio o el producto demandado con una cierta calidad, pueda optar a un contrato.
+
+En el caso del software propietario, para cada producto no hay más que un proveedor. Si se especifica un producto dado, se está decidiendo también qué proveedor contratará con la administración. Y en muchos casos es prácticamente imposible evitar especificar un cierto producto cuando estamos hablando de programas de ordenador. Razones de compatibilidad dentro de la organización, o de ahorros en formación y administración, u otros muchos, hacen habitual que una administración decida usar un cierto producto.
+
+La única salida a esta situación es que el producto especificado sea libre. En ese caso, cualquier empresa interesada podrá proporcionarlo, y también cualquier tipo de servicio sobre él. Además, en caso de contratar de esta manera, la administración pertinente podrá en el futuro cambiar inmediatamente de proveedor si así lo desea, y sin ningún problema técnico, pues aunque cambie de empresa, el producto que usará será el mismo.
+
+\item \textbf{Adaptación a las necesidades exactas:} Aunque la adaptación a sus necesidades exactas es algo que necesita cualquier organización que precisa de la informática, las peculiaridades de la administración hacen que éste sea un factor muy importante para el éxito de la implantación de un sistema informático. En el caso de usar software libre, la adaptación puede hacerse con mucha mayor facilidad, y lo que es más importante, sirviéndose de un mercado con competencia, si hace falta contratarla.
+
+Cuando una administración compra un producto propietario, modificarlo pasa normalmente por alcanzar un acuerdo con su productor, que es el único que legalmente (y muchas veces técnicamente) puede hacerlo. En esas condiciones, es difícil realizar buenas negociaciones, sobre todo si el productor no está  excesivamente interesado en el mercado que le ofrece la administración en cuestión. Sin embargo, usando un producto libre, esa administración puede modificarlo a su antojo, si dispone de personal para ello, o contratar externamente la modificación. Esta contratación la puede realizar en principio cualquier empresa que tenga los conocimientos y capacidades para ello, por lo que es de esperar que haya concurrencia de varias empresas. Este hecho, necesariamente tiende a abaratar los costes y a mejorar la calidad.
+
+\item \textbf{Escrutinio público de seguridad:} Para una administración pública poder garantizar que sus sistemas informáticos hacen sólo lo que está previsto que hagan es un requisito fundamental, y en muchos estados, un requisito legal. No son pocas las veces que esos sistemas manejan datos privados, en los que pueden estar interesados muchos terceros (pensemos en datos fiscales, penales, censales, electorales, etc.). Difícilmente, si se usa una aplicación propietaria sin código fuente disponible, puede asegurarse que efectivamente esa aplicación trata esos datos como debe. Pero incluso si se ofrece su código fuente, las posibilidades que tendrá una institución pública para asegurar que no contiene código extraño serán muy limitadas. Sólo si se puede encargar ese trabajo de forma habitual y rutinaria a terceros, y cualquier parte interesada puede escrutarlos, podrá estar la administración razonablemente segura de cumplir con ese deber fundamental, o al menos de tomar todas las medidas en su mano para hacerlo.
+
+\item \textbf{Disponibilidad a largo plazo:} Muchos datos que manejan las administraciones y los programas
+que sirven para calcularlos han de estar disponibles dentro de decenas de años. Es muy difícil asegurar que un programa propietario cualquiera estará disponible cuando hayan pasado esos periodos de tiempo, y más si lo que se desea es que funcione en la plataforma habitual en ese momento futuro. Por el contrario, es muy posible que su productor haya perdido interés en el producto y no lo haya portado a nuevas plataformas, o que sólo esté dispuesto a hacerlo ante grandes contraprestaciones económicas. De nuevo, hay que recordar que sólo él puede hacer ese porte, y por lo tanto será difícil negociar con él. En el caso del software libre, por el contrario, la aplicación está disponible con seguridad para que cualquiera la porte y la deje funcionando según las necesidades de la administración. Si eso no sucede de forma espontánea, la administración siempre puede dirigirse a varias empresas buscando la mejor oferta para hacer el trabajo. De esta forma puede garantizarse que la aplicación y los datos que maneja
+estarán disponibles cuando haga falta.
+\end{itemize}
+
+{\bf Dificultades de adopción}\newline
+
+Si bien las ventajas de uso del software libre en las administraciones son muchas, también son muchas las dificultades cuando se enfrentan a su puesta en práctica.
+
+\begin{itemize}
+
+\item \textbf{Desconocimiento y falta de decisión política:} El primer problema que se encuentra el software libre para su introducción en las administraciones es uno que comparte con otras organizaciones: es aún muy desconocido entre quienes toman las decisiones.
+
+Éste es un problema que cada vez se va solucionando mejor, pero en muchos ámbitos de las administraciones el software libre aún es percibido como algo extraño, y tomar decisiones en la línea de usarlo implica asumir ciertos riesgos.
+
+\item \textbf{Poca adecuación de los mecanismos de contratación:} Los mecanismos de contratación que se usan hoy día en la administración, desde los modelos de concurso público habituales hasta la división del gasto en partidas, están diseñados fundamentalmente para la compra de productos informáticos, y no tanto para la adquisición de servicios relacionados con los programas. Sin embargo, cuando se utiliza software libre, habitualmente no hay producto que comprar, o su precio es casi despreciable. Por el contrario, para aprovechar las posibilidades que ofrece el software libre, es conveniente poder contratar servicios a su alrededor. Esto hace preciso que, antes de utilizar seriamente software libre, se hayan diseñado mecanismos burocráticos adecuados que faciliten la contratación en estos casos.
+
+\item \textbf{Falta de estrategia de implantación:} En muchos casos, el software libre comienza a usarse en una administración simplemente porque el coste de adquisición es más bajo. Es muy habitual en estos casos que el producto en cuestión se incorpore al sistema informático sin mayor planificación, y en general sin una estrategia global de uso y aprovechamiento de software libre. Esto causa que la mayor parte de las ventajas del software libre se pierdan en el camino, ya que todo queda en el uso de un producto más barato.
+
+Si a esto unimos que el uso de software libre, si no se diseña el cambio a él adecuadamente, puede suponer unos costes de transición no despreciables, hace que experiencias aisladas, y fuera de un marco claro, de uso de software libre en la administración puedan resultar fallidas y frustrantes.
+
+\item \textbf{Escasez o ausencia de productos libres en ciertos segmentos:} La implantación de software libre en cualquier organización puede
+chocar con la falta de alternativas libres de la calidad adecuada para cierto tipo de aplicaciones. En esos casos, la solución es complicada:
+lo único que se puede hacer es tratar de promover la aparición del producto libre que se necesita.
+
+Las administraciones públicas están en una buena posición para estudiar seriamente si les conviene fomentar, o incluso financiar o cofinanciar el desarrollo de ese producto.
+
+\end{itemize}
+
+{\bf Actuaciones de las administraciones públicas en el mundo del software}\newline
+Las administraciones públicas actúan sobre el mundo del software al menos de tres maneras:
+
+\begin{itemize}
+
+\item Comprando programas y servicios relacionados con ellas. Las administraciones, como grandes usuarios de informática, son un actor fundamental en el mercado del software.
+
+\item Promoviendo de diversas formas el uso (y la adquisición) de ciertos programas en la sociedad. Esta promoción se hace a veces ofreciendo incentivos económicos (desgravaciones fiscales, incentivos directos, etc.), a veces con información y recomendaciones.
+
+\item Financiando (directa o indirectamente) proyectos de investigación y desarrollo que están diseñando el futuro de la informática.
+
+\end{itemize}
+
+{\bf El Software y la Seguridad Nacional:}\newline
+ 
+ El Estado debe almacenar y procesar información relativa a los ciudadanos. La relación entre el individuo y el Estado depende de la privacidad e integridad de estos datos, que por consiguiente deben ser adecuadamente resguardados contra tres riesgos específicos:
+ 
+\begin{itemize}
+\item  Riesgo de filtración: los datos confidenciales deben ser tratados de tal manera que el acceso a ellos sea posible exclusivamente para las personas e instituciones autorizadas.
+\item   Riesgo de imposibilidad de Acceso: los datos deben ser almacenados de tal forma que el acceso a ellos por parte de las personas e instituciones autorizadas esté garantizado durante toda la vida útil de la información.
+\item Riesgo de manipulación: la modificación de los datos debe estar restringida, nuevamente, a las personas e instituciones autorizadas.
+\end{itemize}
+La concreción de cualquiera de estas tres amenazas puede tener consecuencias graves tanto para el Estado como para el individuo.\newline
+
+{\bf  El Software Libre Atiende las Necesidades de la Seguridad Nacional}
+
+El software libre permite al usuario la inspección completa y exhaustiva del mecanismo mediante el cual procesa los datos. Sin la posibilidad de la inspección, es imposible saber si el programa cumple con su función, o si además incluye vulnerabilidades intencionales o accidentales que permitan a terceros acceder indebidamente a los datos, o impedir que los usuarios legítimos de la información puedan usarlo. El hecho de permitir la inspección del programa es una excelente medida de seguridad, ya que al estar expuestos los mecanismos, estos están constantemente a la vista de profesionales capacitados, con lo que se vuelve inmensamente más difícil ocultar funciones maliciosas, aún si el usuario final no se toma el trabajo de buscarlas él mismo.\newline
+
+{\bf Software Libre que utiliza el Gobierno}
+\begin{itemize}
+\item  OpenStack: Sistema capaz de realizar diversas funciones en la nube, automatización, nubes privadas y publicas, etc, infinidad de cosas que el sistema OpenStack permite realizar y que por supuesto fue nacida y creada precisamente por el gobierno.
+\item Jenkins: Herramienta que es capaz de encontrar todo tipo de errores en el código fuente de un sistema. Es por eso que las empresas de gobierno utilizan tanto Jenkins. El objetivo es tener una serie de sistemas libres de errores, nada de fugas, nada de entradas externas, con Jenkins todo queda blindado y solucionado. 
+\item WineHQ: Esta aplicación, lo que hace es que es capaz de emular el sistema operativo de Windows. De esta forma no importa que sistema operativo utilices, podrás hacer uso de tus programas tradicionales sin ningún problema. Te recuerdo que WineHQ también es libre, por lo que la podrás descargar fácilmente de internet.
+\end{itemize}
+
+{\bf La necesidad de una ley de uso de software en el Estado} \newline
+
+Con lo antes dicho hemos visto que el software tiene un profundo impacto en las actividades realizadas por el Estado. Los riesgos que involucra una elección desafortunada no son menores: imposibilidad de auditar la función pública, falta de garantías por parte del Estado sobre la manipulación de la información privada de sus ciudadanos, dependencia de un proveedor para el correcto desempeño de las funciones del Estado, imposibilidad de los ciudadanos de acceder a su información, entre otras. 
+Es claro entonces que la adquisición de software por parte del Estado debiera estar regulada por una ley que, previendo este tipo de situaciones, fije las condiciones bajo las cuales el proveedor debe suministrar los programas en cuestión. No puede dejarse librada a cada funcionario responsable de un área de la administración pública la decisión de las condiciones de contratación o compra de software, dado los peligros que podría acarrear para el conjunto de la comunidad una elección desafortunada.
 
 \section{Software libre en la educación}
 
-{\bf El software libre es importante en la educación por las siguientes razones:}
+Analizaremos los distintos aspectos relacionados con el uso de software en la formación de profesionales en Informática. Desarrollaremos dicho análisis desde tres enfoques diferentes: el económico, el académico y el ético.
+
 \begin{itemize}
-\item El software libre supone un ahorro económico para las escuelas, pero este es un beneficio secundario. El ahorro es posible porque el software libre le da a las escuelas, igual que a cualquier otro usuario, la libertad de copiar y redistribuir el software. Así, el sistema educativo puede entregar una copia del programa a todas las escuelas, y cada una de ellas puede instalarlo en todos los ordenadores que posea sin estar obligada a pagar por ello.
-\item Las escuelas tienen una misión social: enseñar a los alumnos a ser ciudadanos de una sociedad fuerte, capaz, independiente, solidaria y libre. Deben promover el uso de software libre al igual que promueven la conservación y el voto. Enseñando el software libre, las escuelas pueden formar ciudadanos preparados para vivir en una sociedad digital libre. Esto ayudará a que la sociedad entera se libere del dominio de las mega corporaciones. Enseñar el uso de un programa que no es libre equivale, por el contrario, a inculcar la dependencia, lo cual se opone a la misión social de las escuelas. Las escuelas no deben hacerlo, nunca.
-\item El software libre permite a los alumnos aprender cómo funciona el software. Las escuelas que utilicen software libre contribuirán al progreso de los alumnos más brillantes en programación. Algunos alumnos son programadores natos, de adolescentes anhelan aprender absolutamente todo sobre los ordenadores y el software. Manifiestan una intensa curiosidad por leer el código fuente de los programas que usan a diario.
-\item La tarea fundamental de las escuelas es enseñar a ser buenos ciudadanos, incluyendo el hábito de ayudar a los demás. En el ámbito informático, esto se traduce en enseñar a compartir el software.
+
+\item {\bf Aspecto económico}\\
+Aunque, como aclaramos previamente, la libertad del software no implica su gratuidad, esto no invalida el hecho de que el software propietario es altamente costoso tanto en su adquisición como en su mantenimiento.\\
+El alto precio de las licencias de uso, en las que se basa el modelo de comercialización y distribución propietario, hacen que los montos que debieran invertirse en la adquisición del derecho de utilización sean muy elevados.\\
+Dichos costos contrastan notoriamente con los costos de adquisición de los productos licenciados como software libre.\\ 
+Cabe resaltar una diferencia radical entre ambos modelos: en el caso del Software Propietario, lo que se adquiere al pagar el precio de una licencia es el permiso de ejecutar el programa en cuestión bajo determinadas condiciones, en tanto que al adquirir una pieza de Software Libre se obtiene una copia del programa (incluyendo su código fuente) y el permiso del autor para hacer uso de las cuatro libertades que definen a este tipo de software. \\
+El impacto de las licencias del Software Propietario no sólo debe tenerse en cuenta a la hora de evaluar los costos de equipar un laboratorio informático en una institución educativa, sino que también debe atenderse al hecho de que aquellos alumnos que quieran utilizar las mismas herramientas en su hogar también deberán adquirir dichas licencias. 
+
+\item {\bf Aspecto académico}\\
+Aunque el objetivo de la educación de nivel universitario no es formar especialistas en determinada tecnología, es indudable que a la hora de aplicar los conceptos teóricos debe optarse por alguna en particular . Es una obligación, por parte del docente, el seleccionar cuidadosamente las tecnologías más con venientes a tal efecto. \\
+En el caso del software, a través de la historia, una serie de empresas -que han gozado de una situación de monopolio- han pretendido marcar el rumbo tecnológico. Invariablemente, estas empresas han tratado de ejercer presión sobre el sistema académico para lograr el acercamiento de los estudiantes a sus productos, invirtiendo en muchos casos elevadas sumas de dinero a tal efecto (bajo la forma de con venios o donaciones). \\
+Creemos que el uso de herramientas propietarias, generalmente ligadas a tecnologías específicas bajo el control de determinadas empresas, contribuye a lograr una fuerte dependencia del futuro profesional en las mismas. Luego, dicho profesional en el desempeño de sus actividades, actuará como un agente de ventas de dicha empresa al ofrecer a sus clientes soluciones basadas exclusivamente en los productos que conoce. \\
+Por contrapartida, al utilizar herramientas libres, se le brinda al estudiante la posibilidad de conocer los detalles de la implementación de las mismas y los fundamentos tecnológicos en los que éstas se basan.
+
+\item {\bf Aspecto ético}\\
+Con relación al alto costo de las licencias de uso, es una actividad muy común en  la actualidad la  utilización de “copias no autorizadas” de productos propietarios.\\
+La práctica de este tipo de actividades conlleva las siguientes consecuencias:
+
+\begin{itemize}
+    \item La violación de las condiciones de la licencia correspondiente  al producto utilizado de forma irregular constituye lisa y llanamente una violación de la ley.
+\end{itemize}
+\begin{itemize}
+    \item El uso de copias no autorizadas contribuye a la estrategia utilizada por las empresas productoras de software propietario para promocionar sus productos y provocando así el llamado “efecto de red”, ya que al tratarse de tecnología cerrada y bajo el control de dichas empresas, se está propiciando el establecimiento de la misma como un estándar “de facto”.
+\end{itemize}
 \end{itemize}
 
+{\bf Necesidad de una política institucional} \\
 
-{\bf ¿Por qué algunos programadores de software privativo ofrecen a las escuelas copias gratuitas de programas que no son libres?}
-
-Porque quieren utilizar a las escuelas para imponer la dependencia de sus productos. No entregarán copias gratuitas a los estudiantes una vez que se hayan graduado, así como tampoco a las empresas para las cuales trabajarán. Una vez que uno es dependiente, se espera que pague, y las futuras actualizaciones pueden ser costosas.
-
-
-{\bf Algunos sistemas operativos libres para la educación:}
-\begin{itemize}
-\item Skolelinux/Debian Edu.
-\item Fedora Education spin.
-\item OpenSUSE: Education-Li-f-e.
-\end{itemize}
+Ante los peligros que puede acarrear la incorrecta elección de herramientas propietarias en la formación universitaria, creemos que ésta es una decisión que no puede quedar librada al criterio de cada docente, sino que debe definirse una política institucional que determine los lineamientos para la elección de herramientas y tecnologías informáticas en las distintas actividades desarrolladas dentro de su ámbito.\\
 
 {\bf Software libre utilizado en la educación Argentina:}
 \begin{itemize}
@@ -32,28 +135,27 @@ Porque quieren utilizar a las escuelas para imponer la dependencia de sus produc
 \end{itemize}
 
 \section{Software libre en organizaciones sociales}
-Hay muchas razones, por sus principios filosóficos por razones jurídicas, sociales y socieconómicas, funcionalidad, accesibilidad y seguridad. Para las organizaciones y movimientos sociales de América Latina y del mundo, el software libre puede ser incorporado como herramienta tecnológica y, por qué no, también como herramienta de liberación.
-
+Hay muchas razones, por sus principios filosóficos por razones jurídicas, sociales y socieconómicas, funcionalidad, accesibilidad y seguridad. Para las organizaciones y movimientos sociales de América Latina y del mundo, el software libre puede ser incorporado como herramienta tecnológica y, por qué no, también como herramienta de liberación.\\
 {\bf Por sus principios filosóficos:}
 \begin{itemize}
-\item  Considera la libertad y la solidaridad como principios éticos fundamentales.
-\item  Considera el conocimiento como un bien público que beneficia a la colectividad en general y permite el desarrollo igualitario.
-\item  El software es conocimiento y debe difundirse sin trabas.
-\item   Coloca el beneficio de la humanidad por encima de cualquier cosa.
+\item Considera la libertad y la solidaridad como principios éticos fundamentales.
+\item Considera el conocimiento como un bien público que beneficia a la colectividad en general y permite el desarrollo igualitario.
+\item El software es conocimiento y debe difundirse sin trabas.
+\item Coloca el beneficio de la humanidad por encima de cualquier cosa.
 \end{itemize}
 
 Por razones jurídicas:
 \begin{itemize}
-\item  Es legal compartir y regalar software libre a otras personas.
-\item   Evita los problemas de uso ilegal de licencias de software propietario/privativo y sus posibles implicaciones legales (demandas, multas, entre otros).
+\item Es legal compartir y regalar software libre a otras personas.
+\item Evita los problemas de uso ilegal de licencias de software propietario/privativo y sus posibles implicaciones legales (demandas, multas, entre otros).
 \end{itemize}
 
 {\bf Por razones sociales y socioeconómicas:}
 \begin{itemize}
 \item Promueve la economía solidaria y el comercio justo.
-\item  C Contempla a las personas usuarias como sujetos de derechos no como consumidores de productos.
-\item   Se desarrolla en términos colaborativos y participativos.
-\item  Las organizaciones no cuentan con muchos recursos económicos y se necesita destinar los que tiene para el logro de su misión y objetivos.
+\item Contempla a las personas usuarias como sujetos de derechos no como consumidores de productos.
+\item Se desarrolla en términos colaborativos y participativos.
+\item Las organizaciones no cuentan con muchos recursos económicos y se necesita destinar los que tiene para el logro de su misión y objetivos.
 \item  Las licencias del software propietario/privativo son muy caras para las organizaciones sociales (costo de pagar licencias para cada computadora y programas 
 especializados).
 \item En la mayoría de los casos, las organizaciones no podrían costear las multas impuestas judicialmente como resultado de demandas legales por el uso ilegal de 
@@ -68,53 +170,7 @@ licencias de software privativo.
 información “delicada” que necesita ser resguardada, el software libre también ofrece herramientas para asegurar la información.
 \end{itemize}
 
-{\bf ¿Por qué se puede optar?}
-
-Como sistema operativo se puede optar por GNU/Linux en cualquiera de sus tantas distribuciones, Ubuntu (www.ubuntu.org) o Debian www.debian.org).
-El navegador de internet Firefox reemplaza al Internet Explorer y es lejos mucho mejor que éste. Para aplicaciones de oficina OpenOffice.org no tiene nada que envidiarle a su rival Office de Microsoft. Para edición de imágenes GIMP; para ilustraciones vectorizadas InSkape, para diseño html NVU, para FTP FilleZilla y la lista continúa.
-El uso de software libre en las organizaciones y movimientos sociales, donde la autonomía y el modelo de sociedad y de desarrollo se ponen en juego, permite una alternativa al modelo dominante. El software libre como conjunto de herramientas y aplicaciones para facilitar procesos y ser útil a las luchas de los pueblos por su emancipación es indispensable en la construcción de otro mundo posible.
-
-\section{Software libre en el Estado}
- {\bf¿Que gana el estado con el uso de software libre?}
- 
-Muchas veces se pone adelante de todas las ventajas el ahorro monetario. Según los sistemas instalados, sus costos, y las herramientas disponibles para reemplazarlas, este ahorro puede ser realmente importante, pero puede ser mermado a corto plazo por los costos de realizar la transición de los sistemas.
-Aún así, existen muchas otras ventajas en el uso de software libre, que son inmediatas y más importantes, al punto de ser cruciales para la adopción de estas políticas por el estado:
-\begin{itemize}
-\item  Independencia tecnológica: Mediante el uso de software libre, el Estado deja de tener sus sistemas controlados por una entidad externa (con frecuencia empresas extranjeras). De esta forma rompe la dependencia tecnológica que lo tiene actualmente atado y obtiene las libertades que el software libre otorga.
-\item  Control de la información: Esto sale directamente como consecuencia directa de las libertades del software libre. Al tener la libertad de inspeccionar el mecanismo de funcionamiento del software y la manera en que almacena los datos, y la posibilidad de modificar (o contratar a alguien que modifique) estos aspectos, queda en manos del Estado la llave del acceso a la información (en vez de quedar en manos privadas).
-\item  Confiabilidad y estabilidad: El software libre, al ser público, está sometido a la inspección de una multitud de personas, que pueden buscar problemas, solucionarlos, y compartir la solución con los demás. Debido a esto, y a lo que se llama “el principio de Linus” (dada la suficiente cantidad de ojos, cualquier error del software es evidente), los programas libres gozan de un excelente nivel de confiabilidad y estabilidad, requerido para las aplicaciones críticas del Estado.
-\item  Seguridad: Este es uno de los puntos clave para el Estado. Mucha de la información que el Estado maneja puede ser peligrosa en manos incorrectas. Es por esto que es crítico que el Estado pueda fiscalizar que su software no tenga puertas de entrada traseras, voluntarias o accidentales, y que pueda cerrarlas en caso de encontrarlas; tal inspección sólo es posible con el software libre.
-\end{itemize}
-
- {\bf¿Qué problemas puede enfrentar implementar estas políticas?}
- 
-Obviamente, una propuesta de implementación reduciría los beneficios de los vendedores de software cerrado. Es de esperar que éstos ejerzan toda la presión a su disposición para evitar que se tomen medidas que involucren migración a software libre. Frente a ese peligro, hay que considerar que está en juego el control de la información por parte del Estado, y las libertades individuales de los ciudadanos. Debe tenerse en cuenta que una política de este tipo no discrimina en contra de productos o proveedores específicos, sino contra ciertas prácticas nocivas que involucran el control de la información del usuario por parte del proveedor. Es fundamental que el Estado no se someta a estas presiones. Eso es lo que motiva las restricciones de esta política, que tienen como fin establecer cualidades mínimas para garantizar los derechos de los ciudadanos, la calidad del software y la seguridad de la información. Toda empresa que acepte proveer sus productos sin comprometer estos derechos no tendrá problema alguno al hacerlo.
-
-
-  {\bf El Software y la Seguridad Nacional:}
- 
- El Estado debe almacenar y procesar información relativa a los ciudadanos. La relación entre el individuo y el Estado depende de la privacidad e integridad de estos datos, que por consiguiente deben ser adecuadamente resguardados contra tres riesgos específicos:
- 
-\begin{itemize}
-\item  Riesgo de filtración: los datos confidenciales deben ser tratados de tal manera que el acceso a ellos sea posible exclusivamente para las personas e instituciones autorizadas.
-\item   Riesgo de imposibilidad de Acceso: los datos deben ser almacenados de tal forma que el acceso a ellos por parte de las personas e instituciones autorizadas esté garantizado durante toda la vida útil de la información.
-\item Riesgo de manipulación: la modificación de los datos debe estar restringida, nuevamente, a las personas e instituciones autorizadas.
-\end{itemize}
-La concreción de cualquiera de estas tres amenazas puede tener consecuencias graves tanto para el Estado como para el individuo. 
-
-{\bf  El Software Libre Atiende las Necesidades de la Seguridad Nacional}
-
-El software libre permite al usuario la inspección completa y exhaustiva del mecanismo mediante el cual procesa los datos. Sin la posibilidad de la inspección, es imposible saber si el programa cumple con su función, o si además incluye vulnerabilidades intencionales o accidentales que permitan a terceros acceder indebidamente a los datos, o impedir que los usuarios legítimos de la información puedan usarlo. 
-El hecho de permitir la inspección del programa es una excelente medida de seguridad, ya que al estar expuestos los mecanismos, estos están constantemente a la vista de profesionales capacitados, con lo que se vuelve inmensamente más difícil ocultar funciones maliciosas, aún si el usuario final no se toma el trabajo de buscarlas él mismo.
-
-{\bf Software Libre que utiliza el Gobierno}
-\begin{itemize}
-\item  OpenStack: Sistema capaz de realizar diversas funciones en la nube, automatización, nubes privadas y publicas, etc, infinidad de cosas que el sistema OpenStack permite realizar y que por supuesto fue nacida y creada precisamente por el gobierno.
-\item Jenkins: Herramienta que es capaz de encontrar todo tipo de errores en el código fuente de un sistema. Es por eso que las empresas de gobierno utilizan tanto Jenkins. El objetivo es tener una serie de sistemas libres de errores, nada de fugas, nada de entradas externas, con Jenkins todo queda blindado y solucionado. 
-\item WineHQ: Esta aplicación, lo que hace es que es capaz de emular el sistema operativo de Windows. De esta forma no importa que sistema operativo utilices, podrás hacer uso de tus programas tradicionales sin ningún problema. Te recuerdo que WineHQ también es libre, por lo que la podrás descargar fácilmente de internet.
-\end{itemize}
-
-\subsection{Voto Electrónico}
+\section{Voto Electrónico}
 
 {\bf Consideraciones sobre el voto electrónico}
 \begin{itemize}
@@ -135,8 +191,12 @@ El hecho de permitir la inspección del programa es una excelente medida de segu
 \end{itemize}
 
 \section{Licencia Creative Commons}
-Poner tus obras bajo una licencia Creative Commons no significa que no tengan copyright. Este tipo de licencias ofrecen algunos derechos a otras personas bajo ciertas condiciones. ¿Qué condiciones? Esta web te permite escoger o unir las condiciones de la siguiente lista:
+Es una organización sin fines de lucro dedicada a promover el acceso y el intercambio de cultura. Desarrolla un conjunto de instrumentos jurídicos de carácter gratuito que facilitan usar y compartir tanto la creatividad como el conocimiento.\\
+Los instrumentos jurídicos desarrollados por la organización consisten en un conjunto de “modelos de contratos de licenciamiento” o licencias de derechos de autor que ofrecen al autor de una obra una manera simple y estandarizada de otorgar permiso al público para compartir y usar su trabajo creativo bajo los términos y condiciones de su elección. En este sentido, las licencias Creative Commons permiten al autor cambiar fácilmente los términos y condiciones de derechos de autor de su obra de “todos los derechos reservados” a “algunos derechos reservados”.\\
+Las licencias Creative Commons no reemplazan a los derechos de autor, sino que se apoyan en estos para permitir elegir los términos y condiciones de la licencia de una obra de la manera que mejor satisfaga al titular de los derechos. Por tal motivo, estas licencias han sido entendidas por muchos como una manera en que los autores pueden tomar el control de cómo quieren compartir su propiedad intelectual.\\
+Existe una serie de licencias Creative Commons, cada una con diferentes configuraciones, que permite a los autores poder decidir la manera en la que su obra va a circular en internet, entregando libertad para citar, reproducir, crear obras derivadas y ofrecerla públicamente, bajo ciertas restricciones.\\
 
+Las licencias Creative Commons están compuestas por cuatro módulos de condiciones:
 \begin{itemize}
 \item Atribución (Attribution): En cualquier explotación de la obra autorizada por la licencia será necesario reconocer la autoría (obligatoria en todos los casos).
 \item No Comercial (Non commercial): La explotación de la obra queda limitada a usos no comerciales.
@@ -144,7 +204,7 @@ Poner tus obras bajo una licencia Creative Commons no significa que no tengan co
 \item Compartir Igual (Share alike): La explotación autorizada incluye la creación de obras derivadas siempre que mantengan la misma licencia al ser divulgadas.
 \end{itemize}
 
-Con estas condiciones se pueden generar las seis combinaciones que producen las licencias Creative Commons:
+Con estas condiciones se pueden generar distintas combinaciones que producen las licencias Creative Commons:
 
 \begin{itemize}
 \item Atribución (by): Se permite cualquier explotación de la obra, incluyendo la explotación con fines comerciales y la creación de obras derivadas, la distribución de las cuales también está permitida sin ninguna restricción. Esta licencia es una licencia libre según la Freedom Defined.
@@ -155,7 +215,7 @@ Con estas condiciones se pueden generar las seis combinaciones que producen las 
 \item Atribución – No Comercial – Sin Obra Derivada (by-nc-nd): No se permite un uso comercial de la obra original ni la generación de obras derivadas. Esta licencia no es una licencia libre, y es la más cercana al derecho de autor tradicional.
 \end{itemize}
 
-{\bf Obtener la licencia}
+{\bf Obtener la licencia}\\
 
 Cuando hayas hecho tu elección tendrás la licencia adecuada para tu trabajo expresada de tres formas:
 
@@ -165,12 +225,29 @@ Cuando hayas hecho tu elección tendrás la licencia adecuada para tu trabajo ex
 \item Digital Code: El código digital, que puede leer la máquina y que sirve para que los motores de búsqueda y otras aplicaciones identifiquen tu trabajo y sus condiciones de uso.
 \end{itemize}
 
-{\bf Utilizar la licencia}
+{\bf Utilizar la licencia}\\
 
 Una vez escogida la licencia tenés que incluir el ícono de Creative Commons “Algunos derechos reservados” en tu sitio, cerca de tu obra. Este ícono enlaza con el Commons Deed, de forma que todos puedan estar informados de las condiciones de la licencia. Si encontrás que alguien cometió una infracción a la licencia, entonces tendrás las bases para poder defender tus derechos.
 
-{\bf Creative commons en Argentina}
+{\bf Creative commons en Argentina}\\
 
 Creative Commons Argentina está a cargo de dos organizaciones afiliadas: Fundación Vía Libre y Wikimedia Argentina.
 
+\section{Licencias libres para documentación}
 
+Las siguientes licencias reúnen las condiciones necesarias para calificarse como licencias de documentación libre.
+
+\begin{itemize}
+\item {\bf La Licencia de documentación libre de GNU o GFDL}\\
+Es una licencia copyleft para contenido libre, diseñada por la Fundación para el Software Libre (FSF) para el proyecto GNU. \\
+Esta licencia, a diferencia de otras, asegura que el material licenciado bajo la misma esté disponible de forma completamente libre, pudiendo ser copiado, redistribuido, modificado e incluso vendido siempre y cuando el material se mantenga bajo los términos de esta misma licencia (GNU GFDL). \\
+Dicha licencia fue diseñada principalmente para manuales, libros de texto y otros materiales de referencia e institucionales que acompañaran al software GNU. Sin embargo puede ser usada en cualquier trabajo basado en texto, sin que importe cuál sea su contenido.
+\item {\bf FreeBSD Documentation License}\\
+Esta es una licencia de documentación libre y permisiva, sin copyleft, incompatible con la FDL de GNU.
+\item {\bf Apple's Common Documentation License}\\
+Esta en una licencia de documentación libre, incompatible con la FDL de GNU. Es incompatible porque la sección (2c) dice «No agregue otros términos ni condiciones a esta licencia», y la FDL de GNU posee cláusulas adicionales que no están contempladas en la Common Documentation License.
+\item {\bf Open Publication License}\\
+Esta licencia puede ser utilizada como de documentación libre. Es una licencia libre con copyleft para documentación , siempre y cuando el titular del copyright no ejerza ninguna de las «OPCIONES DE LA LICENCIA» que se mencionan en la sección VI. Pero si se invoca cualquiera de esas opciones, la licencia se vuelve privativa. En cualquier caso, es incompatible con la FDL de GNU.
+
+    
+\end{itemize}
